Fix wrapping search-button text
- And keep the search input height always the same

refs #27162

--- a/pub/static/themes/whitelabel/views/default/mixins/_listitems-controls.scss
+++ b/pub/static/themes/whitelabel/views/default/mixins/_listitems-controls.scss
@@ -125,6 +125,7 @@
         form {
             @include flexbox;
             @include flex-flow(row);
+            @include align-items(center);
         }
 
         input[type=search] {
@@ -142,6 +143,8 @@
             @include button-emphasized-navigational {
                 overflow: visible;
             };
+            // avoid text wrapping
+            @include flex-shrink(0);
         }
 
         .search-description {
